Added section "Plantgender"

--- a/html/pride.html
+++ b/html/pride.html
@@ -2087,6 +2087,38 @@
               <br>
             </div>
           </section>
+          <!-- プラントジェンダー（Plantgender） -->
+          <section>
+            <button class="accordion">プラントジェンダー</button>
+            <div class="panel">
+              <h2 id="Plantgender">プラントジェンダー</h2><hr>
+              <div class="pride-color">
+                <p>
+                  <span style="">Placeholder text</span><br>
+                  <span style="">:3</span>
+                </p>
+              </div>
+              <div class="pride-display">
+                <div class="container">
+                  <a href="https://www.deviantart.com/pride-flags/art/Plantgender-870197002" title="プラントジェンダー" target="_blank">
+                    <img class="pride-flag image" src="../img/pride/xeno/Plantgender.png" alt="プラントジェンダー" title="プラントジェンダー（Plantgender）">
+                  </a>
+                  <div class="middle">
+                    <div class="text">
+                      プラントジェンダー
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <p class="p-space">
+                日本語：プラントジェンダー<br>
+                English: Plantgender
+              </p>
+              <br>
+              <br>
+              <br>
+            </div>
+          </section>
         </div>
       </article>
       <!-- 他のプライド :3（Other prides! :3） -->
