Added section "Starfluid"

--- a/html/pride.html
+++ b/html/pride.html
@@ -2119,6 +2119,38 @@
               <br>
             </div>
           </section>
+          <!-- スターフリュイド（Starfluid） -->
+          <section>
+            <button class="accordion">スターフリュイド</button>
+            <div class="panel">
+              <h2 id="Starfluid">スターフリュイド</h2><hr>
+              <div class="pride-color">
+                <p>
+                  <span style="">Placeholder text</span><br>
+                  <span style="">:3</span>
+                </p>
+              </div>
+              <div class="pride-display">
+                <div class="container">
+                  <a href="https://xeno-aligned.tumblr.com/post/173784321531/juparian-starfluid-a-form-of-genderfluid" title="スターフリュイド" target="_blank">
+                    <img class="pride-flag image" src="../img/pride/xeno/Starfluid.png" alt="スターフリュイド" title="スターフリュイド（Starfluid）">
+                  </a>
+                  <div class="middle">
+                    <div class="text">
+                      スターフリュイド
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <p class="p-space">
+                日本語：スターフリュイド<br>
+                English: Starfluid
+              </p>
+              <br>
+              <br>
+              <br>
+            </div>
+          </section>
         </div>
       </article>
       <!-- 他のプライド :3（Other prides! :3） -->
