Added section "Otherkin & Therian"

--- a/html/pride.html
+++ b/html/pride.html
@@ -2158,10 +2158,36 @@
         <button class="accordion">他のプライド :3</button>
         <div class="panel">
           <h1 id="Other_Prides">他のプライド :3</h1>
-          <!--  -->
+          <!-- 獣人（Otherkin & Therian） -->
           <section>
-            <button class="accordion"></button>
+            <button class="accordion">獣人</button>
             <div class="panel">
+              <h2 id="Otherkin_and_Therian">獣人</h2><hr>
+              <div class="pride-color">
+                <p>
+                  <span style="">Placeholder text</span><br>
+                  <span style="">:3</span>
+                </p>
+              </div>
+              <div class="pride-display">
+                <div class="container">
+                  <a href="https://en.wikipedia.org/wiki/Otherkin" title="獣人" target="_blank">
+                    <img class="pride-flag image" src="../img/pride/Otherkin.png" alt="獣人" title="獣人（Otherkin & Therian）">
+                  </a>
+                  <div class="middle">
+                    <div class="text">
+                      獣人
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <p class="p-space">
+                日本語：獣人<br>
+                English: Otherkin & Therian
+              </p>
+              <br>
+              <br>
+              <br>
             </div>
           </section>
         </div>
