Added section "Hypersexual"

--- a/html/pride.html
+++ b/html/pride.html
@@ -2197,10 +2197,36 @@
         <button class="accordion">議論になるプライド</button>
         <div class="panel">
           <h1 id="Controversial">議論になるプライド</h1>
-          <!--  -->
+          <!-- ハイパーセクシャル（Hypersexual） -->
           <section>
-            <button class="accordion"></button>
+            <button class="accordion">ハイパーセクシャル</button>
             <div class="panel">
+              <h2 id="Hypersexual">ハイパーセクシャル</h2><hr>
+              <div class="pride-color">
+                <p>
+                  <span style="">Placeholder text</span><br>
+                  <span style="">:3</span>
+                </p>
+              </div>
+              <div class="pride-display">
+                <div class="container">
+                  <a href="https://en.wikipedia.org/wiki/Hypersexuality" title="ハイパーセクシャル" target="_blank">
+                    <img class="pride-flag image" src="../img/pride/contention/Hypersexual.png" alt="ハイパーセクシャル" title="ハイパーセクシャル（Hypersexual）">
+                  </a>
+                  <div class="middle">
+                    <div class="text">
+                      ハイパーセクシャル
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <p class="p-space">
+                日本語：ハイパーセクシャル<br>
+                English: Hypersexual
+              </p>
+              <br>
+              <br>
+              <br>
             </div>
           </section>
         </div>
