Imported image_box.css

--- a/html/extra_kyara.html
+++ b/html/extra_kyara.html
@@ -27,6 +27,7 @@
     <title>造化神録　エキストラ　詰らない人々</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/extra_kyara.js"></script>
   </head>
