--- a/html/navy.html
+++ b/html/navy.html
@@ -27,6 +27,7 @@
     <title>造化神録　宇志江王立海軍</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/navy.js"></script>
   </head>
