--- a/html/qarya_al-arnabu.html
+++ b/html/qarya_al-arnabu.html
@@ -27,6 +27,7 @@
     <title>造化神録　ウサギの里</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/qarya_al-arnabu.js"></script>
   </head>
