--- a/html/tasniastein.html
+++ b/html/tasniastein.html
@@ -27,6 +27,7 @@
     <title>造化神録　タズニアシュタイン州</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/tasniastein.js"></script>
   </head>
