--- a/html/xasmad.html
+++ b/html/xasmad.html
@@ -27,6 +27,7 @@
     <title>造化神録　ザスマッド州</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/xasmad.js"></script>
   </head>
