--- a/html/ahia.html
+++ b/html/ahia.html
@@ -27,6 +27,7 @@
     <title>造化神録　アーヒア道</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/ahia.js"></script>
   </head>
