--- a/html/akhalipshi.html
+++ b/html/akhalipshi.html
@@ -27,6 +27,7 @@
     <title>造化神録　アハリプシ州</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/akhalipshi.js"></script>
   </head>
