--- a/html/ancient.html
+++ b/html/ancient.html
@@ -28,6 +28,7 @@
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/ancient.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/ancient.js"></script>
   </head>
