--- a/html/bingyan.html
+++ b/html/bingyan.html
@@ -27,6 +27,7 @@
     <title>造化神録　冰岩王國</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/bingyan.js"></script>
   </head>
