--- a/html/boss.html
+++ b/html/boss.html
@@ -28,6 +28,7 @@
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/boss.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/boss.js"></script>
   </head>
