--- a/html/claeq-swary.html
+++ b/html/claeq-swary.html
@@ -27,6 +27,7 @@
     <title>造化神録　クレーク＝スワリーのカウンシル・エリア</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/claeq-swary.js"></script>
   </head>
