--- a/html/creation.html
+++ b/html/creation.html
@@ -27,6 +27,7 @@
     <title>造化神録　創造する神々</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/creation.js"></script>
   </head>
