--- a/html/hikigahara.html
+++ b/html/hikigahara.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/accordion.css">
     <link rel="stylesheet" href="../css/hikigahara.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/hikigahara.js"></script>
   </head>
