--- a/html/hourai.html
+++ b/html/hourai.html
@@ -27,6 +27,7 @@
     <title>造化神録　蓬莱山の八仙様達</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/hourai.js"></script>
   </head>
