--- a/html/incidental.html
+++ b/html/incidental.html
@@ -27,6 +27,7 @@
     <title>造化神録　さまざまな町人</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/incidental.js"></script>
   </head>
