--- a/html/kableustein.html
+++ b/html/kableustein.html
@@ -28,6 +28,7 @@
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/kableustein.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/kableustein.js"></script>
   </head>
