--- a/html/lladane_e_re.html
+++ b/html/lladane_e_re.html
@@ -27,6 +27,7 @@
     <title>造化神録　新・ラダナ市</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/lladane_e_re.js"></script>
   </head>
