--- a/html/nizi.html
+++ b/html/nizi.html
@@ -28,6 +28,7 @@
     <!-- The CSS stylesheets -->
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/nizi.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/nizi.js"></script>
   </head>
