--- a/html/others.html
+++ b/html/others.html
@@ -27,6 +27,7 @@
     <title>造化神録　他の人々</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/others.js"></script>
   </head>
