--- a/html/tengoku.html
+++ b/html/tengoku.html
@@ -27,6 +27,7 @@
     <title>造化神録　天王国</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/image_box.css">
     <!-- Scripts -->
     <script src="../js/tengoku.js"></script>
   </head>
