Imported accordion.css and accordion.js

--- a/html/hikigahara.html
+++ b/html/hikigahara.html
@@ -94,6 +94,7 @@
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
+    <!-- Placing this here since, for some reason, if placed in head, then the accordion refuses to work >.> -->
     <script src="../js/accordion.js"></script>
   </body>
 </html>
