--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -28,6 +28,7 @@
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/image_box.css">
+    <link rel="stylesheet" href="../css/accordion.css">
     <!-- Scripts -->
     <script src="../js/obsidianrat.js"></script>
   </head>
@@ -97,7 +98,7 @@
         </p>
         <p>
           ※代名詞は「あたい」である。<br>
-          　『com』使用のたとえば：「<span class="oblique">Com</span> is talking with <span class="oblique">cometself</span> about <span class="oblique">comets</span> day. But who is answering <span class="oblique">comet</span>, though?」
+          『com』使用のたとえば：「<span class="oblique">Com</span> is talking with <span class="oblique">cometself</span> about <span class="oblique">comets</span> day. But who is answering <span class="oblique">comet</span>, though?」
         </p>
       </section>
       <!--ハービー・チャッドボーン（Harvey Chadbourne）  -->
@@ -555,5 +556,7 @@
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
+    <!-- Placing this here since, for some reason, if placed in head, then the accordion refuses to work >.> -->
+    <script src="../js/accordion.js"></script>
   </body>
 </html>
