--- a/html/ancient.html
+++ b/html/ancient.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/ancient.css">
     <link rel="stylesheet" href="../css/image_box.css">
+    <link rel="stylesheet" href="../css/accordion.css">
     <!-- Scripts -->
     <script src="../js/ancient.js"></script>
   </head>
@@ -1167,5 +1168,7 @@
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
+    <!-- Placing this here since, for some reason, if placed in head, then the accordion refuses to work >.> -->
+    <script src="../js/accordion.js"></script>
   </body>
 </html>
