--- a/html/credit.html
+++ b/html/credit.html
@@ -27,6 +27,7 @@
     <title>造化神録　スタッフ</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/accordion.css">
     <!-- Scripts -->
     <script src="../js/credit.js"></script>
   </head>
@@ -57,5 +58,7 @@
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
+    <!-- Placing this here since, for some reason, if placed in head, then the accordion refuses to work >.> -->
+    <script src="../js/accordion.js"></script>
   </body>
 </html>
