--- a/html/flame_dragon.html
+++ b/html/flame_dragon.html
@@ -28,6 +28,7 @@
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/image_box.css">
+    <link rel="stylesheet" href="../css/accordion.css">
     <!-- Scripts -->
     <script src="../js/flame_dragon.js"></script>
   </head>
@@ -1145,5 +1146,7 @@
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
+    <!-- Placing this here since, for some reason, if placed in head, then the accordion refuses to work >.> -->
+    <script src="../js/accordion.js"></script>
   </body>
 </html>
