--- a/html/lladane_e_re.html
+++ b/html/lladane_e_re.html
@@ -28,6 +28,7 @@
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/image_box.css">
+    <link rel="stylesheet" href="../css/accordion.css">
     <!-- Scripts -->
     <script src="../js/lladane_e_re.js"></script>
   </head>
@@ -54,5 +55,7 @@
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
+    <!-- Placing this here since, for some reason, if placed in head, then the accordion refuses to work >.> -->
+    <script src="../js/accordion.js"></script>
   </body>
 </html>
