--- a/html/monster.html
+++ b/html/monster.html
@@ -28,6 +28,7 @@
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/monster.css">
+    <link rel="stylesheet" href="../css/accordion.css">
     <!-- Scripts -->
     <script src="../js/monster.js"></script>
   </head>
@@ -525,8 +526,10 @@
       <br>
       <br>
     </main>
-	<footer>
-	  <p>© 2024 虹川郷鬼</p>
-	</footer>
+    <footer>
+      <p>© 2024 虹川郷鬼</p>
+    </footer>
+    <!-- Placing this here since, for some reason, if placed in head, then the accordion refuses to work >.> -->
+    <script src="../js/accordion.js"></script>
   </body>
 </html>
